--- a/index.html
+++ b/index.html
@@ -1,53 +1,60 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Todo App</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
-  </head>
-  <body>
-    <div class="aaa">
-      <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+
+<head>
+  <title>Todo App</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+</head>
+
+<body class="body">
+  <div class="hero">
+    <img class="hero__img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
+    <a class="hero__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  </div>
+  <div class="todo">
+    <p class="todo__section" id="add-section">
+      <label class="todo__section-title todo__section-title_new" for="new-task">Add Item</label>
+    <div class="todo__task task">
+      <input class="task__input task__input_new" id="new-task" type="text">
+      <button class="task__btn">Add</button>
     </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text">
-          <button>Add</button>
-        </div>
-      </p>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg" alt="icon: remove"></button>
-        </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg" alt="icon: remove"></button>
-        </li>
-      </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="icon: remove">
-          </button>
-        </li>
-      </ul>
-    </div>
-    <script src="app.js"></script>
-  </body>
+    </p>
+    <h3 class="todo__section-title">Todo</h3>
+    <ul class="todo__section" id="incomplete-tasks">
+      <li class="todo__task task">
+        <input class="task__checkbox" type="checkbox">
+        <label class="task__name">Pay Bills</label>
+        <input class="task__input" type="text">
+        <button class="task__btn task__btn_edit">Edit</button>
+        <button class="task__btn task__btn_delete">
+          <img class="remove-icon" src="./remove.svg" alt="icon: remove">
+        </button>
+      </li>
+      <li class="todo__task task edit-mode">
+        <input class="task__checkbox" type="checkbox">
+        <label class="task__name">Go Shopping</label>
+        <input class="task__input" type="text" value="Go Shopping">
+        <button class="task__btn task__btn_edit">Save</button>
+        <button class="task__btn task__btn_delete">
+          <img class="remove-icon" src="./remove.svg" alt="icon: remove">
+        </button>
+      </li>
+    </ul>
+    <h3 class="todo__section-title">Completed</h3>
+    <ul class="todo__section todo__section_completed" id="completed-tasks">
+      <li class="todo__task task">
+        <input class="task__checkbox" type="checkbox" checked>
+        <label class="task__name">See the Doctor</label>
+        <input class="task__input" type="text">
+        <button class="task__btn task__btn_edit">Edit</button>
+        <button class="task__btn task__btn_delete">
+          <img class="remove-icon" src="./remove.svg" alt="icon: remove">
+        </button>
+      </li>
+    </ul>
+  </div>
+  <script src="app.js"></script>
+</body>
+
 </html>
