--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <img class="hero__img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
     <a class="hero__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
-  <div class="todo">
-    <p class="todo__section" id="add-section">
+  <main class="todo">
+    <section class="todo__section" id="add-section">
       <label class="todo__section-title todo__section-title_new" for="new-task">Add Item</label>
-    <div class="todo__task task">
-      <input class="task__input task__input_new" id="new-task" type="text">
-      <button class="task__btn">Add</button>
-    </div>
-    </p>
+      <div class="todo__task task">
+        <input class="task__input task__input_new" id="new-task" type="text">
+        <button class="task__btn">Add</button>
+      </div>
+    </section>
     <h3 class="todo__section-title">Todo</h3>
     <ul class="todo__section" id="incomplete-tasks">
       <li class="todo__task task">
@@ -53,7 +53,7 @@
         </button>
       </li>
     </ul>
-  </div>
+  </main>
   <script src="app.js"></script>
 </body>
 
